new javafx maven depenencies, updated reamdme
- Removed javafx lib jars from /src/main/resources
- Added a maven dependency to download those jars instead
- Updated openjfx maven plugin to more recent version
- Updated README.md with simplified maven usage instructions